# cafe_azu_bot

./: README.md  README_for_Team.md
admin_panel/: pyproject.toml
admin_panel/admin_panel/: settings.py  urls.py
admin_panel/azucafe/: admin.py  constants.py  models.py  robokassa.py  urls.py  views.py  views_booking.py  views_payments.py
admin_panel/templates/admin/: cafe_detail.html
admin_panel/templates/azucafe/: booking.html  index.html
admin_panel/templates/includes/: header.html
admin_panel/templates/payments/: payment_fail.html  payment_success.html
bot/: main.py  pyproject.toml
bot/alembic/versions/: 583ac24d4d9b_02_update_job_model.py  90c4ccaf0af2_03_add_payments_control_model.py  f1cacb3a65d8_01_init_db.py
bot/core/: config.py  db.py
bot/crud/: order.py  worker.py
bot/models/: __init__.py  models.py
bot/modules/: __init__.py  booking.py  booking_detail.py  cafe.py  date.py  guests.py  menu.py  misc.py  payment.py  start.py  timers.py
infra/: README.md  README_for_Team.md  docker-compose_prod.yml
infra/config/: example.general  index.html
